--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,22 +38,11 @@
       <form action="/restaurants" method="POST">
         <div class="modal-body container">
 
-          {{!-- <div class="mb-3">
-            <label for="id" class="form-label">id</label>
-            <input type="text" class="form-control" id="id" name="id" placeholder="id">
-          </div> --}}
-
           <div class="d-flex justify-content-between">
             <div class="mb-3">
               <label for="name" class="form-label">店名<span class="text-danger">*</span></label>
               <input type="text" class="form-control" id="name" name="name" placeholder="阿娟鴨肉羹咖哩飯" required>
             </div>
-
-            {{!-- <div class="mb-3">
-              <label for="name_en" class="form-label">英文店名</label>
-              <input type="text" class="form-control" id="name_en" name="name_en"
-                placeholder="A Juan Duck Soup & Curry Rice">
-            </div> --}}
 
             <div class="mb-3">
               <label for="category" class="form-label">分類<span class="text-danger">*</span></label>
@@ -85,18 +74,14 @@
 
           <div class="mb-3">
             <label for="rating" class="form-label">評分<span class="text-danger">*</span></label>
-            <input type="text" class="form-control" id="rating" name="rating" placeholder="4.8" required>
+            <input type="number" class="form-control" id="rating" name="rating" min="0.0" max="5.0" step="0.1"
+              placeholder="0.0 - 5.0" required>
           </div>
 
           <div class="mb-3">
             <label for="image" class="form-label">圖片連結</label>
             <input type="text" class="form-control" id="image" name="image" placeholder="http://*.jpg or png">
           </div>
-
-          {{!-- <div class="mb-3">
-            <label for="google_map" class="form-label">Google地圖連結</label>
-            <input type="text" class="form-control" id="google_map" name="google_map" placeholder="google_map">
-          </div> --}}
 
           <div class="mb-3">
             <label for="description" class="form-label">店家資訊<span class="text-danger">*</span></label>
