--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -48,3 +48,7 @@
     </div>
   </div>
 </div>
+
+<script>
+  window.onload = () => { document.querySelector('[data-bs-target="#createModal"]').click(); }
+</script>
