--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,82 +20,6 @@
           <i class="fas fa-plus-circle"></i>
         </span>
       </h5>
-
-    </div>
-  </div>
-</div>
-
-<!-- Create Page Modal -->
-<div class="modal fade" id="createModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-  aria-labelledby="staticBackdropLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">新增餐廳</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-
-      <form action="/restaurants" method="POST">
-        <div class="modal-body container">
-
-          <div class="d-flex justify-content-between">
-            <div class="mb-3">
-              <label for="name" class="form-label">店名<span class="text-danger">*</span></label>
-              <input type="text" class="form-control" id="name" name="name" placeholder="阿娟鴨肉羹咖哩飯" required>
-            </div>
-
-            <div class="mb-3">
-              <label for="category" class="form-label">分類<span class="text-danger">*</span></label>
-              <input type="text" class="form-control" id="category" list="categoryOptions" name="category"
-                placeholder="台式料理" required>
-              <datalist id="categoryOptions">
-                <option value="日本料理">
-                <option value="中東料理">
-                <option value="台式料理">
-                <option value="義式餐廳">
-                <option value="美式">
-                <option value="咖啡">
-                <option value="酒吧">
-              </datalist>
-            </div>
-          </div>
-
-          <div class="mb-3">
-            <label for="location" class="form-label">店家地址<span class="text-danger">*</span></label>
-            <input type="text" class="form-control" id="location" name="location" placeholder="700台南市中西區保安路36號"
-              required>
-          </div>
-
-          <div class="mb-3">
-            <label for="phone" class="form-label">連絡電話</label>
-            <input type="tel" class="form-control" id="phone" name="phone" placeholder="06 2248 134"
-              inputmode="numeric">
-          </div>
-
-          <div class="mb-3">
-            <label for="rating" class="form-label">評分<span class="text-danger">*</span></label>
-            <input type="number" class="form-control" id="rating" name="rating" min="0.0" max="5.0" step="0.1"
-              placeholder="0.0 - 5.0" required>
-          </div>
-
-          <div class="mb-3">
-            <label for="image" class="form-label">圖片連結</label>
-            <input type="text" class="form-control" id="image" name="image" placeholder="http://*.jpg or png">
-          </div>
-
-          <div class="mb-3">
-            <label for="description" class="form-label">店家資訊<span class="text-danger">*</span></label>
-            <textarea rows="3" cols="10" type="text" class="form-control" id="description" name="description"
-              placeholder="台南在地美食！好吃又便宜~ CP值頗高~" required></textarea>
-          </div>
-
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
-          <button type="reset" class="btn btn-secondary">Reset</button>
-          <button type="submit" class="btn btn-primary">Finish</button>
-        </div>
-      </form>
     </div>
   </div>
 </div>
@@ -126,7 +50,7 @@
           <div class="foot">
             <div class="space"></div>
             <div class="foot-items">
-              <a class="btn btn-success btn-sm" href="./restaurants/{{ this.id }}">Edit</a>
+              <a class="btn btn-success btn-sm" href="./restaurants/{{ this.id }}/edit">Edit</a>
               <a class="btn btn-primary btn-sm" href="./restaurants/{{ this.id }}">Detail</a>
               <form action="/" method="POST" style="display: inline">
                 <button type="submit" class="btn btn-danger btn-sm">Delete</button>
@@ -183,7 +107,9 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
-                <a class="btn btn-success btn-sm" href="./restaurants/{{ this.id }}">Edit</a>
+                <form action="./restaurants/{{ this.id }}/edit" method="POST" style="display: inline">
+                  <button type="submit" class="btn btn-success btn-sm">Edit</button>
+                </form>
                 <form action="/" method="POST" style="display: inline">
                   <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                 </form>
