--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -38,11 +38,11 @@
         style="max-width: 600px;">
 
       <dir class="d-flex justify-content-center">
-        <a href="/" class="btn btn-dark btn-lg mx-1">Back</a>
-        <a class="btn btn-success btn-lg mx-1" data-bs-toggle="modal" data-bs-target="#createModal"
-          href="./restaurants/{{ this.id }}/edit">Edit</a>
+        <a href="/" class="btn btn-dark mx-1">Back</a>
+        <a class="btn btn-success mx-1" data-bs-toggle="modal" data-bs-target="#createModal"
+          href="./restaurants/{{ restaurant.id }}/edit">Edit</a>
         <form action="/restaurants/{{ restaurant.id }}/delete" method="POST">
-          <button type="submit" class="btn btn-danger btn-lg mx-1">Delete</button>
+          <button type="submit" class="btn btn-danger mx-1">Delete</button>
         </form>
       </dir>
     </div>
