--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,70 +37,73 @@
           <h5 class="modal-title" id="staticBackdropLabel">新增餐廳</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-
+        {{#if restaurant.id}}
         <form action="/restaurants/{{restaurant.id}}" method="POST">
-          <div class="modal-body container">
+          {{else}}
+          <form action="/restaurants/0" method="POST">
+            {{/if}}
+            <div class="modal-body container">
 
-            <div class="d-flex justify-content-between">
-              <div class="mb-3">
-                <label for="name" class="form-label">店名<span class="text-danger">*</span></label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="阿娟鴨肉羹咖哩飯"
-                  value="{{ restaurant.name }}" required>
+              <div class="d-flex justify-content-between">
+                <div class="mb-3">
+                  <label for="name" class="form-label">店名<span class="text-danger">*</span></label>
+                  <input type="text" class="form-control" id="name" name="name" placeholder="阿娟鴨肉羹咖哩飯"
+                    value="{{ restaurant.name }}" required>
+                </div>
+
+                <div class="mb-3">
+                  <label for="category" class="form-label">分類<span class="text-danger">*</span></label>
+                  <input type="text" class="form-control" id="category" list="categoryOptions" name="category"
+                    placeholder="台式料理" value="{{ restaurant.category }}" required>
+                  <datalist id="categoryOptions">
+                    <option value="日本料理">
+                    <option value="中東料理">
+                    <option value="台式料理">
+                    <option value="義式餐廳">
+                    <option value="美式">
+                    <option value="咖啡">
+                    <option value="酒吧">
+                  </datalist>
+                </div>
               </div>
 
               <div class="mb-3">
-                <label for="category" class="form-label">分類<span class="text-danger">*</span></label>
-                <input type="text" class="form-control" id="category" list="categoryOptions" name="category"
-                  placeholder="台式料理" value="{{ restaurant.category }}" required>
-                <datalist id="categoryOptions">
-                  <option value="日本料理">
-                  <option value="中東料理">
-                  <option value="台式料理">
-                  <option value="義式餐廳">
-                  <option value="美式">
-                  <option value="咖啡">
-                  <option value="酒吧">
-                </datalist>
+                <label for="location" class="form-label">店家地址<span class="text-danger">*</span></label>
+                <input type="text" class="form-control" id="location" name="location" placeholder="700台南市中西區保安路36號"
+                  value="{{ restaurant.location }}" required>
               </div>
-            </div>
 
-            <div class="mb-3">
-              <label for="location" class="form-label">店家地址<span class="text-danger">*</span></label>
-              <input type="text" class="form-control" id="location" name="location" placeholder="700台南市中西區保安路36號"
-                value="{{ restaurant.location }}" required>
-            </div>
+              <div class="mb-3">
+                <label for="phone" class="form-label">連絡電話</label>
+                <input type="tel" class="form-control" id="phone" name="phone" placeholder="06 2248 134"
+                  inputmode="numeric" value="{{ restaurant.phone }}">
+              </div>
 
-            <div class="mb-3">
-              <label for="phone" class="form-label">連絡電話</label>
-              <input type="tel" class="form-control" id="phone" name="phone" placeholder="06 2248 134"
-                inputmode="numeric" value="{{ restaurant.phone }}">
-            </div>
+              <div class="mb-3">
+                <label for="rating" class="form-label">評分<span class="text-danger">*</span></label>
+                <input type="number" class="form-control" id="rating" name="rating" min="0.0" max="5.0" step="0.1"
+                  placeholder="0.0 - 5.0" value="{{ restaurant.rating }}" required>
+              </div>
 
-            <div class="mb-3">
-              <label for="rating" class="form-label">評分<span class="text-danger">*</span></label>
-              <input type="number" class="form-control" id="rating" name="rating" min="0.0" max="5.0" step="0.1"
-                placeholder="0.0 - 5.0" value="{{ restaurant.rating }}" required>
-            </div>
+              <div class="mb-3">
+                <label for="image" class="form-label">圖片連結</label>
+                <input type="text" class="form-control" id="image" name="image" placeholder="http://*.jpg or png"
+                  value="{{ restaurant.image }}">
+              </div>
 
-            <div class="mb-3">
-              <label for="image" class="form-label">圖片連結</label>
-              <input type="text" class="form-control" id="image" name="image" placeholder="http://*.jpg or png"
-                value="{{ restaurant.image }}">
-            </div>
+              <div class="mb-3">
+                <label for="description" class="form-label">店家資訊<span class="text-danger">*</span></label>
+                <textarea rows="3" cols="10" type="text" class="form-control" id="description" name="description"
+                  placeholder="台南在地美食！好吃又便宜~ CP值頗高~" required>{{ restaurant.description }}</textarea>
+              </div>
 
-            <div class="mb-3">
-              <label for="description" class="form-label">店家資訊<span class="text-danger">*</span></label>
-              <textarea rows="3" cols="10" type="text" class="form-control" id="description" name="description"
-                placeholder="台南在地美食！好吃又便宜~ CP值頗高~" required>{{ restaurant.description }}</textarea>
             </div>
-
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
-            <a id="reset" class="btn btn-secondary">Reset</a>
-            <button type="submit" class="btn btn-primary">Finish</button>
-          </div>
-        </form>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+              <a id="reset" class="btn btn-secondary">Reset</a>
+              <button type="submit" class="btn btn-primary">Finish</button>
+            </div>
+          </form>
       </div>
     </div>
   </div>
