--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -52,7 +52,7 @@
             <div class="foot-items">
               <a class="btn btn-success btn-sm" href="./restaurants/{{ this.id }}/edit">Edit</a>
               <a class="btn btn-primary btn-sm" href="./restaurants/{{ this.id }}">Detail</a>
-              <form action="/restaurants/{{ this.id }}/delete" method="POST" style="display: inline">
+              <form action="/restaurants/{{ this.id }}?_method=DELETE" method="POST" style="display: inline">
                 <button type="submit" class="btn btn-danger btn-sm">Delete</button>
               </form>
             </div>
@@ -108,7 +108,7 @@
               <div class="modal-footer d-flex justify-content-center">
                 <a href="/" class="btn btn-dark mx-1">Back</a>
                 <a class="btn btn-success mx-1" href="./restaurants/{{ this.id }}/edit">Edit</a>
-                <form action="/restaurants/{{ this.id }}/delete" method="POST">
+                <form action="/restaurants/{{ this.id }}?_method=DELETE" method="POST">
                   <button type="submit" class="btn btn-danger mx-1">Delete</button>
                 </form>
               </div>
