--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,6 +42,18 @@ header {
   color: #9b4b4b;
 }
 
+.input-group {
+  width: 70%;
+}
+
+.form-select {
+  min-width: 70px;
+  border-radius: 4px;
+  border: 1px solid rgba(180, 180, 180, 0.6);
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
 .form-control::placeholder {
   color: #aaaaaa;
   font-size: 0.8rem;
