--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,17 +2,29 @@
 <div class="container search-bar">
   <div class="search-bar-outer">
     <div class="search-bar-inner">
-      <form action="/search">
+      <form action="/restaurants/search">
         <h4 class="mb-2">尋找餐廳：</h4>
-        <div class="input-group">
-          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
-            value="{{ keyword }}" aria-describedby="search-button">
-          <div class="input-group-append">
-            <button class="btn btn-major" type="submit" id="search-button"><i class="fas fa-search"></i></button>
+        <div class="d-flex justify-content-between">
+          <div class="input-group">
+            <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..."
+              value="{{ keyword }}" aria-describedby="search-button">
+            <div class="input-group-append">
+              <button class="btn btn-major" type="submit" id="search-button">
+                <i class="fas fa-search"></i>
+              </button>
+            </div>
           </div>
+          <select class="form-select" name="sort" aria-label="Default select example">
+            <option selected>Sort</option>
+            <option value="name">A > Z</option>
+            <option value="-name">Z > A</option>
+            <option value="category">類別</option>
+            <option value="location">地區</option>
+          </select>
         </div>
       </form>
     </div>
+
     <div class="new-create mt-3">
       <h5>找不到喜歡的餐廳？ 自己建一個吧！
         <span class="create-button" data-bs-toggle="modal" data-bs-target="#createModal">
@@ -21,6 +33,7 @@
         </span>
       </h5>
     </div>
+
   </div>
 </div>
 
