--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,6 +24,10 @@
         </div>
       </form>
     </div>
+    {{#if restaurants}}
+    {{else}}
+    <p class="search-error">找不到您要的餐廳哦~</p>
+    {{/if}}
   </div>
 </div>
 
