fix: remove translate

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -96,7 +96,7 @@
 
               <div class="mb-3">
                 <label for="image" class="form-label">圖片連結</label>
-                <input type="text" class="form-control" id="image" name="image" placeholder="http://*.jpg or png"
+                <input type="url" class="form-control" id="image" name="image" placeholder="http://*.jpg or png"
                   value="{{ restaurant.image }}">
               </div>
 
