--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,6 +35,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
+      <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#createModal">Create</button>
       <div class="card-columns">
         {{#each restaurants}}
         <div class="card">
