--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,17 +20,17 @@
         <a class="navbar-brand" href="/">
           <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
             width="30" height="30" class="d-inline-block align-top" alt="我的餐廳清單">
+          {{#if isAuthenticated}}
+          {{ user.name}}的餐廳清單
+          {{else}}
           我的餐廳清單
-        </a>
-        {{#if restaurant.id}}
-        {{else}}
-        <div class="new-create">
-          <div class="create-button" data-bs-toggle="modal" data-bs-target="#createModal">
-            <span>Create</span>
-            <i class="fas fa-plus-circle"></i>
-          </div>
           {{/if}}
-        </div>
+        </a>
+        {{#if isAuthenticated}}
+        <a href="/users/logout" class="btn btn-primary btn-sm">Logout</a>
+        {{else}}
+        <a href="/users/login" class="btn btn-primary btn-sm">Login</a>
+        {{/if}}
       </div>
     </nav>
 
